--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,25 @@ bluepay.mode=TEST
 
 
 
-### Springboot default configuration properties for the h2 database ###
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-### Property to enable the console for the h2 database ###
-### Browser url for h2 console - http://localhost:/h2-console
-spring.h2.console.enabled=true
+#### Springboot default configuration properties for the h2 database ###
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#### Property to enable the console for the h2 database ###
+#### Browser url for h2 console - http://localhost:/h2-console
+#spring.h2.console.enabled=true
+
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=test;integratedSecurity=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql = true
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = update
+
+spring.jackson.serialization.fail-on-empty-beans=false
