--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<groupId>com.abhisek</groupId>
 	<artifactId>demo-gateway-bluepay</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>demo-gateway-bluepay</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -114,12 +115,14 @@
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-		<dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+        </dependency>    
+        
+        <dependency>
+    <groupId>com.microsoft.sqlserver</groupId>
+    <artifactId>mssql-jdbc</artifactId>
+        <version>8.1.0.jre8-preview</version>
+</dependency>
+           
 	</dependencies>
 
 	<build>
